--- a/Edge.Processes.DirectoryWatcher/trunk/App.config
+++ b/Edge.Processes.DirectoryWatcher/trunk/App.config
@@ -9,13 +9,13 @@
 	</connectionStrings>
 	
 	<edge.processes.directoryWatcher>
-		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.xml" AccountID="95" ServiceName="ChickenChopService" SourceUrl="{FilePath}"/>
-		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.txt" AccountID="95" ServiceName="ChickenShitService" SourceUrl="{FilePath}"/>
+		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.xml" AccountID="95" ServiceName="Adwords" Options.SourceUrl="{FilePath}"/>
+		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.txt" AccountID="95" ServiceName="Adwords" Options.SourceUrl="{FilePath}"/>
 	</edge.processes.directoryWatcher>
 
 	<system.serviceModel>
 		<client>
-			<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v2.9"/>
+			<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v2.1/ScheduleManagerSeperia"/>
 		</client>
 		<bindings>
 			<wsHttpBinding>
