logwrite with source

--- a/Edge.Processes.DirectoryWatcher/trunk/App.config
+++ b/Edge.Processes.DirectoryWatcher/trunk/App.config
@@ -9,8 +9,8 @@
 	</connectionStrings>
 	
 	<edge.processes.directoryWatcher>
-		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.xml" AccountID="95" ServiceName="Adwords" Options.SourceUrl="{FilePath}"/>
-		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.txt" AccountID="95" ServiceName="Adwords" Options.SourceUrl="{FilePath}"/>
+		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.xml" AccountID="1008" ServiceName="DeleteDays" Options.SourceUrl="{FilePath}"/>
+		<Directory Path="D:\DirectoryWatcherTest\" Filter="*.txt" AccountID="1008" ServiceName="DeleteDays" Options.SourceUrl="{FilePath}"/>
 	</edge.processes.directoryWatcher>
 
 	<system.serviceModel>
