--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -42,7 +42,7 @@
 		<Services>
 
 			<Service Name="Rerun" IsPublic="true" Class="Edge.Data.Pipeline.Services.RerunService,Edge.Data.Pipeline" />
-			<Service Name="AdMetricsCommit" IsPublic="false" Class="Edge.Services.AdMetrics.CommitService,Edge.Services.AdMetrics"/>
+			<Service Name="AdMetricsCommit" IsPublic="false" Class="Edge.Services.AdMetrics.CommitService,Edge.Services.AdMetrics" MaxInstances="2"	MaxInstancesPerAccount="2"/>
 
 			<!--ValidationServices-->
 			<Service Name="OltpDeliveryValidation"
@@ -117,7 +117,7 @@
 					<Step Base="AdMetricsCommit" IsEnabled="true"/>
 				</Workflow>
 				<SchedulingRules>
-				<Rule ExactTimes="09:38" CalendarUnit="Day" MaxDeviation="00:25"  />
+				<Rule ExactTimes="14:00" CalendarUnit="Day" MaxDeviation="00:25"  />
 				</SchedulingRules>
 			</Service>
 			<Service Name="Microsoft.AdCenter.Initializer" IsPublic="false" Class="Edge.Services.Microsoft.AdCenter.InitializerService, Edge.Services.Microsoft.AdCenter"  />
