--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -138,7 +138,8 @@
 					SQL.RollbackCommand="SP_Delivery_Rollback_By_DeliveryID(@DeliveryID:NvarChar,@TableName:NvarChar)"
 					SQL.CommitCommand="SP_Delivery_Insert_Facebook(@DeliveryFileName:NvarChar,@CommitTableName:NvarChar,@MeasuresNamesSQL:NvarChar,@MeasuresFieldNamesSQL:NvarChar,@Signature:NvarChar,@DeliveryIDsPerSignature:NvarChar,@DeliveryID:NvarChar)"
 					    MaxExecutionTime="00:40:00"
-					     MaxInstances="1"
+					     MaxInstances="100"
+				         MaxInstancesPerAccount="1"
 				        ConflictBehavior="Ignore">
 				<Workflow>
 					<Step Base="FacebookGraphApiInitializerService" />
@@ -150,13 +151,13 @@
 						  CC="sms-0522321243@outlook.wms.telemessage.com,sms-0542444443@outlook.wms.telemessage.com,sms-0544922188@outlook.wms.telemessage.com,shmely@gmail.com,sms-0522499272@outlook.wms.telemessage.com" />
 				</Workflow>
 				<SchedulingRules>
-					<Rule ExactTimes="16:30" CalendarUnit="Day" MaxDeviation="1:15"  />
+					<Rule ExactTimes="15:26" CalendarUnit="Day" MaxDeviation="1:15"  />
 				</SchedulingRules>
 			</Service>
 
-			<Service Name="FacebookGraphApiInitializerService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.InitializerService,Edge.Services.Facebook.GraphApi" MaxInstances="2"	MaxInstancesPerAccount="2"/>
-			<Service Name="FacebookGraphApiRetrieverService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.RetrieverService,Edge.Services.Facebook.GraphApi" MaxInstances="2"	MaxInstancesPerAccount="2"/>
-			<Service Name="FacebookGraphApiProcessorService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.ProcessorService,Edge.Services.Facebook.GraphApi" AutoAdGroupSegment="true" AdGroupDelimiter="@" MaxInstances="2"	MaxInstancesPerAccount="2"/>
+			<Service Name="FacebookGraphApiInitializerService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.InitializerService,Edge.Services.Facebook.GraphApi" MaxInstances="1"	MaxInstancesPerAccount="1"/>
+			<Service Name="FacebookGraphApiRetrieverService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.RetrieverService,Edge.Services.Facebook.GraphApi" MaxInstances="1"	MaxInstancesPerAccount="1"/>
+			<Service Name="FacebookGraphApiProcessorService" IsPublic="false" Class="Edge.Services.Facebook.GraphApi.ProcessorService,Edge.Services.Facebook.GraphApi" AutoAdGroupSegment="true" AdGroupDelimiter="@" MaxInstances="1"	MaxInstancesPerAccount="1"/>
 
 		
 			<Service Name="ImportDeliveryData" Class="Edge.Applications.ImportDataFromDB4oUtill.ImportDeliveryDataService,Edge.Applications.ImportDataFromDB4oUtill"/>
@@ -312,12 +313,12 @@
 		<!--						Accounts						  -->
 		<!-- ======================================================== -->
 		<Accounts>
-			<!--<Account ID="-1" Name="System Account">
+			<Account ID="-1" Name="System Account">
 				<Services>
 					<Service Name="RunSeperiaJob" Uses="RunStoredProcedure" ConnectionString="Data Source=localhost; Database=msdb;User ID=edge1;PWD=Blublu*2!" StoredProcedureName="sp_start_job" Paramjob_name="Seperia_Daily_Last_day"></Service>
 					<Service Name="ADS_RoleBackByDeliveries" Uses="RoleBackByDeliveries"></Service>
 
-					--><!--Oltp Validation--><!--
+					<!--Oltp Validation-->
 					<Service Uses ="OltpDeliveryValidation" Name="AdwordsOltpDeliveryValidation" ProfileName="[Seperia][Google.Adwords][DeliveryOltp]"
 					AccountsList="67,95,1240223,7,1240,520,1239,113,1240227,1240226,1011,1014,42,61,1249,1240234,1240235,1240236,1240239"
 					SourceTable="dbo.Paid_API_AllColumns_v29"
@@ -345,7 +346,7 @@
 						</SchedulingRules>
 					</Service>
 
-					--><!--Mdx --><!--
+					<!--Mdx--> 
 					<Service Uses ="MdxOltpValidation" Name="MdxOltpValidation" ProfileName="[Seperia][MDX]"
 							  AccountsList="1006,95,7,1240,1240226,1007,42,61,1249"
 							  SourceTable="dbo.Paid_API_AllColumns_v29"
@@ -361,17 +362,17 @@
 						</SchedulingRules>
 					</Service>
 
-					--><!--########## Production Managment Tool Configuration #########--><!--
+					<!--########## Production Managment Tool Configuration #########-->
 					<Service Uses="DataChecks.OltpDelivery" />
 					<Service Uses="DataChecks.DwhOltp"/>
 					<Service Uses="DataChecks.MdxDwh"/>
 					<Service Uses="DataChecks.MdxOltp"/>
-					--><!--############################################################--><!--
+					<!--############################################################-->
 
 				</Services>
 			</Account>
 
-			--><!-- ======== PC Speed ======== --><!--
+			 <!--======== PC Speed ========--> 
 			<Account ID="1007" Name="PC Speed">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -400,7 +401,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Conduit ======== --><!--
+			 <!--======== Conduit ========--> 
 			<Account ID="95" Name="Conduit" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -408,7 +409,7 @@
 					</Segment>
 				</AutoSegments>
 				<Services>
-					--><!--In Winter time (from the 31.10 till 27.03) use UTF Offset 0, in Summer time (from the 28.3 till 30.10) use UTF Offset 1--><!--
+					<!--In Winter time (from the 31.10 till 27.03) use UTF Offset 0, in Summer time (from the 28.3 till 30.10) use UTF Offset 1-->
 					<Service Name="WinterBOConduit" Uses="Backoffice"
 							 Bo.ServiceAdress="https://onlinemarketingservices.conduit.com?from={0:yyyy-MM-ddTHH:mmZ}&#38;to={1:yyyy-MM-ddTHH:mmZ}&#38;vendor=EasyNet&#38;Password=FQzqj1kKgkySjqif"
 							 Bo.Xpath="OnlineMarketingReport/Trackers/Tracker"
@@ -423,7 +424,7 @@
 					<Service Uses="Rerun" />
 					
 				</Services>
-			</Account>-->
+			</Account>
 
 			<!-- ======== Bbinary ======== -->
 			<Account ID="1006" Name="Bbinary" >
@@ -447,7 +448,7 @@
 			</Account>
 
 			<!-- ======== Easy Forex ======== -->
-			<!--<Account ID="7" Name="EasyForex" >
+			<Account ID="7" Name="EasyForex" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
 						<Pattern Regex="(\bref_id=(?{ref_id}\w+)\b)" Value="{ref_id}"/>
@@ -480,7 +481,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Stock Pair ======== --><!--
+			 <!--======== Stock Pair ========--> 
 			<Account ID="1249" Name="Stock Pair">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -506,7 +507,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== BezeqInt ======== --><!--
+			 <!--======== BezeqInt ========--> 
 			<Account ID="67" Name="BezeqInt" >
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -516,7 +517,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Proportzia ======== --><!--
+			 <!--======== Proportzia ========--> 
 			<Account ID="42" Name="Proportzia" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -536,7 +537,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== OOVOO ======== --><!--
+			 <!--======== OOVOO ========--> 
 			<Account ID="1014" Name="OOVOO" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -556,7 +557,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== DragonOptions ======== --><!--
+			 <!--======== DragonOptions ========--> 
 			<Account ID="1240223" Name="DragonOptions" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -575,7 +576,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Radvision ======== --><!--
+			 <!--======== Radvision ========--> 
 			<Account ID="109" Name="Radvision">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -598,7 +599,7 @@
 
 			</Account>
 
-			--><!-- ======== Leascar ======== --><!--
+			 <!--======== Leascar ========--> 
 			<Account ID="113" Name="Leascar">
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -608,7 +609,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Homeless ======== --><!--
+			 <!--======== Homeless ========--> 
 			<Account ID="520" Name="Homeless">
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -618,7 +619,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Mojob ======== --><!--
+			 <!--======== Mojob ========--> 
 			<Account ID="1011" Name="Mojob">
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -627,7 +628,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Seperia.com ======== --><!--
+			 <!--======== Seperia.com ========--> 
 			<Account ID="61" Name="Seperia.com">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -649,7 +650,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== harmon.ie ======== --><!--
+			 <!--======== harmon.ie ========--> 
 			<Account ID="1240" Name="harmon.ie">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -691,7 +692,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== InterTrader ======== --><!--
+			 <!--======== InterTrader ========--> 
 			<Account ID="1239" Name="InterTrader ">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -709,7 +710,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Magisto ======== --><!--
+			 <!--======== Magisto ========--> 
 			<Account ID="1240226" Name="Magisto" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -730,7 +731,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Leverate ======== --><!--
+			 <!--======== Leverate ========--> 
 			<Account ID="1240227" Name="Leverate" >
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -740,7 +741,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== ooVoo Desktop ======== --><!--
+			 <!--======== ooVoo Desktop ========--> 
 			<Account ID="1240232" Name="ooVooDesktop" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -759,7 +760,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== onetwotrade ======== --><!--
+			 <!--======== onetwotrade ========--> 
 			<Account ID="1240234" Name="onetwotrade" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -779,7 +780,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Opteck ======== --><!--
+			 <!--======== Opteck ========--> 
 			<Account ID="1240235" Name="Opteck" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -812,7 +813,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== OBoption ======== --><!--
+			 <!--======== OBoption ========--> 
 			<Account ID="1240236" Name="OBoption" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -832,7 +833,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== Rscan ======== --><!--
+			 <!--======== Rscan ========--> 
 			<Account ID="1240237" Name="Rscan" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -854,7 +855,7 @@
 				</Services>
 			</Account>
 
-			--><!-- ======== TraderWorld ======== --><!--
+			 <!--======== TraderWorld ========--> 
 			<Account ID="1240239" Name="TraderWorld" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -874,7 +875,7 @@
 					<Service Uses="Rerun" />
 					
 				</Services>
-			</Account>-->
+			</Account>
 		</Accounts>
 	</edge.services>
 	<system.web>
