--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -1,11 +1,16 @@
 <?xml version="1.0"?>
 <configuration>
+	<configSections>
+		<section name="TargetApplicationsConfiguration" type="SchedulersGuards.TargetApplicationsConfiguration,SchedulersGuards"/>
+	</configSections>
 	<appSettings>		
 		<add key="Edge.Core.Scheduling.Scheduler.Percentile" value="80"/>
 		<add key="Edge.Core.Scheduling.Scheduler.NeededScheduleTimeLine" value="02:00:00"/>
 		<add key="Edge.Core.Scheduling.Scheduler.IntervalBetweenNewSchedule" value="00:00:10"/>
 		<add key="Edge.Core.Scheduling.Scheduler.FindServicesToRunInterval" value="00:00:15"/>
 		<add key="Edge.Core.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00"/>
+		<add key="Edge.Processes.SchedulingHost.ISchedulingCommunication" value="net.pipe://localhost/"/>
+		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeProduct" value="2.1"/>
 	</appSettings>
 	<connectionStrings>		
 		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
@@ -13,8 +18,17 @@
 
 	<system.serviceModel>
 		<services>
+			
 			<service name="Edge.Processes.SchedulingHost.Listener" behaviorConfiguration="behavior">
-				<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v2.1/ScheduleManagerSeperia"/>
+				<endpoint binding="wsHttpBinding" bindingConfiguration="edgeServiceWebBinding" contract="Edge.Core.Scheduling.IScheduleManager" address="http://localhost:27334/v2.1/ScheduleManagerSeperia"/>				
+			</service>
+			<service name="Edge.Processes.SchedulingHost.SchedulingCommunication" >
+				<endpoint  name="Edge.Processes.SchedulingHost.SchedulingCommunication"  binding="netNamedPipeBinding" bindingConfiguration="SchedulerHostConfig" contract="Edge.Processes.SchedulingHost.SchedulingCommunication"  address="net.pipe://localhost/"/>
+				<host>
+					<baseAddresses>
+						<add baseAddress="net.pipe://localhost/Scheduler"/>
+					</baseAddresses> 
+				</host>
 			</service>
 
 		</services>
@@ -47,6 +61,9 @@
 					</security>
 				</binding>
 			</basicHttpBinding>
+			<netNamedPipeBinding>
+				<binding name="SchedulerHostConfig"  maxBufferPoolSize="20000000" maxConnections="20000000" maxBufferSize="20000000" maxReceivedMessageSize="20000000" closeTimeout="00:03:00" openTimeout="00:03:00" />
+			</netNamedPipeBinding>
 		</bindings>
 	</system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
