--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -11,6 +11,8 @@
 		<add key="Edge.Core.Scheduling.Scheduler.DeleteEndedServiceInterval" value="23:59:00"/>
 		<add key="Edge.Processes.SchedulingHost.ISchedulingCommunication" value="net.pipe://localhost/"/>
 		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeProduct" value="2.1"/>
+		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeParentService" value="20"/>
+		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeChildService" value="4"/>
 	</appSettings>
 	<connectionStrings>		
 		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
