--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -15,7 +15,8 @@
 		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeChildService" value="4"/>
 	</appSettings>
 	<connectionStrings>		
-		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
+		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
+		<add name="Edge.Core.Scheduling.Scheduler.System" connectionString="Data Source=alonya-pc;Initial Catalog=Edge_System;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
 	</connectionStrings>
 
 	<system.serviceModel>
