--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -117,7 +117,7 @@
 					<Step Base="AdMetricsCommit" IsEnabled="true"/>
 				</Workflow>
 				<SchedulingRules>
-				<Rule ExactTimes="14:00" CalendarUnit="Day" MaxDeviation="00:25"  />
+				<Rule ExactTimes="13:00" CalendarUnit="Day" MaxDeviation="00:25"  />
 				</SchedulingRules>
 			</Service>
 			<Service Name="Microsoft.AdCenter.Initializer" IsPublic="false" Class="Edge.Services.Microsoft.AdCenter.InitializerService, Edge.Services.Microsoft.AdCenter"  />
@@ -151,7 +151,7 @@
 						  CC="sms-0522321243@outlook.wms.telemessage.com,sms-0542444443@outlook.wms.telemessage.com,sms-0544922188@outlook.wms.telemessage.com,shmely@gmail.com,sms-0522499272@outlook.wms.telemessage.com" />
 				</Workflow>
 				<SchedulingRules>
-					<Rule ExactTimes="13:30" CalendarUnit="Day" MaxDeviation="1:15"  />
+					<Rule ExactTimes="09:00" CalendarUnit="Day" MaxDeviation="1:15"  />
 				</SchedulingRules>
 			</Service>
 
@@ -303,27 +303,21 @@
 					AccountsList="67,95,1240223,7,1240,520,1239,113,1240227,1240226,1011,1014,42,61,1249,1240234,1240235,1240236,1240239"
 					SourceTable="dbo.Paid_API_AllColumns_v29"
 					ChannelList="1"	>
-						<SchedulingRules Overrides="true">
-							<Rule ExactTimes="05:30" CalendarUnit="Day" MaxDeviation="00:09" />
-						</SchedulingRules>
+						
 					</Service>
 
 					<Service Uses ="OltpDeliveryValidation" Name="FacebookOltpDeliveryValidation" ProfileName="[Seperia][Facebook][DeliveryOltp]"
 					AccountsList="7,1240,1240226,1007,42,61,1249,1240232,1006,1240235,1240237"
 					SourceTable="dbo.Paid_API_AllColumns_v29"
 					ChannelList="6"	>
-						<SchedulingRules Overrides="true">
-							<Rule ExactTimes="11:50" CalendarUnit="Day" MaxDeviation="00:15" />
-						</SchedulingRules>
+						
 					</Service>
 
 					<Service Uses ="Segments.DeliveryOltpValidation" Name="BackOfficeOltpDeliveryValidation" ProfileName="[Seperia][BackOffice][DeliveryOltp]"
 										AccountsList="1006,95,1249,1240223,1240,1240234,1240235,1240239,1240236"
 										SourceTable="dbo.BackOffice_Client_Gateway_v29"
 										ChannelList="-1">
-						<SchedulingRules Overrides="true">
-							<Rule ExactTimes="05:30" CalendarUnit="Day" MaxDeviation="00:09" />
-						</SchedulingRules>
+						
 					</Service>
 
 					<!--Mdx--> 
@@ -337,9 +331,7 @@
 							  AccountsList="1006,95,1249,1240223,1240,1240234,1240235,1240239,1240236"
 							  SourceTable="dbo.BackOffice_Client_Gateway_v29"
 							  ChannelList="-1"	>
-						<SchedulingRules Overrides="true">
-							<Rule ExactTimes="06:20" CalendarUnit="Day" MaxDeviation="00:09" />
-						</SchedulingRules>
+						
 					</Service>
 
 					<!--########## Production Managment Tool Configuration #########-->
@@ -874,7 +866,7 @@
 				<binding name="edgeServiceWebBinding" sendTimeout="0:05:00" receiveTimeout="0:05:00"/>
 			</wsHttpBinding>
 			<netTcpBinding>
-				<binding name="Edge.Core.Services.Service.InstanceToEngineBinding" portSharingEnabled="true" receiveTimeout="1:0:0" />
+				<binding name="Edge.Core.Services.Service.InstanceToEngineBinding" portSharingEnabled="true" receiveTimeout="3:0:0" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferPoolSize="2147483647" />
 			</netTcpBinding>
 		</bindings>
 	</system.serviceModel>
