--- a/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
+++ b/Edge.Processes.SchedulingHost/trunk/Edge.Services.config
@@ -94,6 +94,13 @@
 			<Service Name="DataChecks.Segments.OltpDelivery"		IsPublic="false" Class="Edge.Services.SegmentMetrics.Validations.SegmentDeliveryOltpChecksumService, Edge.Services.SegmentMetrics.Validations" AutoAdGroupSegment="true"/>
 			<Service Name="DataChecks.Segments.DeliveryDwh"		IsPublic="false" Class="Edge.Services.SegmentMetrics.Validations.DeliveryDwhCheckSumService, Edge.Services.SegmentMetrics.Validations" AutoAdGroupSegment="true"/>
 			<Service Name="DataChecks.Segments.MdxOltp"		IsPublic="false" Class="Edge.Services.SegmentMetrics.Validations.MdxOltpChecksumService, Edge.Services.SegmentMetrics.Validations" AutoAdGroupSegment="true"/>
+			<Service Name="ImporterTester" Class="Edge.Data.Pipeline.Services.PipelineWorkflowService,Edge.Data.Pipeline">
+				<Workflow>
+					<Step Base="Edge.Processes.SchedulingHost.ImporterServiceTester" />
+					
+				</Workflow>
+			</Service>
+			<Service Name="Edge.Processes.SchedulingHost.ImporterServiceTester" IsPublic="false" Class="Edge.Processes.SchedulingHost.ImporterServiceTester, Edge.Processes.SchedulingHost" AutoAdGroupSegment="true"/>
 			<!-- ###################################################################################################################################################################-->
 
 			<!-- ======== Bing ======== -->
@@ -293,12 +300,24 @@
 		<!--						Accounts						  -->
 		<!-- ======================================================== -->
 		<Accounts>
+			<Account ID="1007" Name="PC Speed">
+				<AutoSegments>
+					<Segment Name="Tracker" SegmentID="-977">
+						<Pattern Regex="\butm_content=(?{utm_content}\w+)\b" Value="{utm_content}"/>
+					</Segment>
+				</AutoSegments>
+				<Services>
+					<Service  Uses="ImporterTester"></Service>
+				</Services>
+			</Account>
+		</Accounts>
+		<!--<Accounts>
 			<Account ID="-1" Name="System Account">
 				<Services>
 					<Service Name="RunSeperiaJob" Uses="RunStoredProcedure" ConnectionString="Data Source=localhost; Database=msdb;User ID=edge1;PWD=Blublu*2!" StoredProcedureName="sp_start_job" Paramjob_name="Seperia_Daily_Last_day"></Service>
 					<Service Name="ADS_RoleBackByDeliveries" Uses="RoleBackByDeliveries"></Service>
 
-					<!--Oltp Validation-->
+					--><!--Oltp Validation--><!--
 					<Service Uses ="OltpDeliveryValidation" Name="AdwordsOltpDeliveryValidation" ProfileName="[Seperia][Google.Adwords][DeliveryOltp]"
 					AccountsList="67,95,1240223,7,1240,520,1239,113,1240227,1240226,1011,1014,42,61,1249,1240234,1240235,1240236,1240239"
 					SourceTable="dbo.Paid_API_AllColumns_v29"
@@ -320,7 +339,7 @@
 						
 					</Service>
 
-					<!--Mdx--> 
+					--><!--Mdx--><!-- 
 					<Service Uses ="MdxOltpValidation" Name="MdxOltpValidation" ProfileName="[Seperia][MDX]"
 							  AccountsList="1006,95,7,1240,1240226,1007,42,61,1249"
 							  SourceTable="dbo.Paid_API_AllColumns_v29"
@@ -334,17 +353,17 @@
 						
 					</Service>
 
-					<!--########## Production Managment Tool Configuration #########-->
+					--><!--########## Production Managment Tool Configuration #########--><!--
 					<Service Uses="DataChecks.OltpDelivery" />
 					<Service Uses="DataChecks.DwhOltp"/>
 					<Service Uses="DataChecks.MdxDwh"/>
 					<Service Uses="DataChecks.MdxOltp"/>
-					<!--############################################################-->
+					--><!--############################################################--><!--
 
 				</Services>
 			</Account>
 
-			 <!--======== PC Speed ========--> 
+			 --><!--======== PC Speed ========--><!-- 
 			<Account ID="1007" Name="PC Speed">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -373,7 +392,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Conduit ========--> 
+			 --><!--======== Conduit ========--><!-- 
 			<Account ID="95" Name="Conduit" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -387,7 +406,7 @@
 				</Services>
 			</Account>
 
-			<!-- ======== Bbinary ======== -->
+			--><!-- ======== Bbinary ======== --><!--
 			<Account ID="1006" Name="Bbinary" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -408,7 +427,7 @@
 				</Services>
 			</Account>
 
-			<!-- ======== Easy Forex ======== -->
+			--><!-- ======== Easy Forex ======== --><!--
 			<Account ID="7" Name="EasyForex" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -445,7 +464,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Stock Pair ========--> 
+			 --><!--======== Stock Pair ========--><!-- 
 			<Account ID="1249" Name="Stock Pair">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -471,7 +490,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== BezeqInt ========--> 
+			 --><!--======== BezeqInt ========--><!-- 
 			<Account ID="67" Name="BezeqInt" >
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -481,7 +500,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Proportzia ========--> 
+			 --><!--======== Proportzia ========--><!-- 
 			<Account ID="42" Name="Proportzia" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -501,7 +520,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== OOVOO ========--> 
+			 --><!--======== OOVOO ========--><!-- 
 			<Account ID="1014" Name="OOVOO" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -521,7 +540,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== DragonOptions ========--> 
+			 --><!--======== DragonOptions ========--><!-- 
 			<Account ID="1240223" Name="DragonOptions" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -540,7 +559,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Radvision ========--> 
+			 --><!--======== Radvision ========--><!-- 
 			<Account ID="109" Name="Radvision">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -563,7 +582,7 @@
 
 			</Account>
 
-			 <!--======== Leascar ========--> 
+			 --><!--======== Leascar ========--><!-- 
 			<Account ID="113" Name="Leascar">
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -573,7 +592,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Homeless ========--> 
+			 --><!--======== Homeless ========--><!-- 
 			<Account ID="520" Name="Homeless">
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -583,7 +602,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Mojob ========--> 
+			 --><!--======== Mojob ========--><!-- 
 			<Account ID="1011" Name="Mojob">
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -592,7 +611,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Seperia.com ========--> 
+			 --><!--======== Seperia.com ========--><!-- 
 			<Account ID="61" Name="Seperia.com">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -618,7 +637,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== harmon.ie ========--> 
+			 --><!--======== harmon.ie ========--><!-- 
 			<Account ID="1240" Name="harmon.ie">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -660,7 +679,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== InterTrader ========--> 
+			 --><!--======== InterTrader ========--><!-- 
 			<Account ID="1239" Name="InterTrader ">
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -678,7 +697,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Magisto ========--> 
+			 --><!--======== Magisto ========--><!-- 
 			<Account ID="1240226" Name="Magisto" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -699,7 +718,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Leverate ========--> 
+			 --><!--======== Leverate ========--><!-- 
 			<Account ID="1240227" Name="Leverate" >
 				<AutoSegments IsEnabled="false">
 				</AutoSegments>
@@ -709,7 +728,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== ooVoo Desktop ========--> 
+			 --><!--======== ooVoo Desktop ========--><!-- 
 			<Account ID="1240232" Name="ooVooDesktop" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -728,7 +747,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== onetwotrade ========--> 
+			 --><!--======== onetwotrade ========--><!-- 
 			<Account ID="1240234" Name="onetwotrade" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -748,7 +767,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Opteck ========--> 
+			 --><!--======== Opteck ========--><!-- 
 			<Account ID="1240235" Name="Opteck" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -781,7 +800,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== OBoption ========--> 
+			 --><!--======== OBoption ========--><!-- 
 			<Account ID="1240236" Name="OBoption" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -801,7 +820,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== Rscan ========--> 
+			 --><!--======== Rscan ========--><!-- 
 			<Account ID="1240237" Name="Rscan" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -823,7 +842,7 @@
 				</Services>
 			</Account>
 
-			 <!--======== TraderWorld ========--> 
+			 --><!--======== TraderWorld ========--><!-- 
 			<Account ID="1240239" Name="TraderWorld" >
 				<AutoSegments>
 					<Segment Name="Tracker" SegmentID="-977">
@@ -844,7 +863,7 @@
 					
 				</Services>
 			</Account>
-		</Accounts>
+		</Accounts>-->
 	</edge.services>
 	<system.web>
 		<webServices>
