--- a/Edge.Processes.DirectoryWatcher/trunk/Edge.Processes.DirectoryWatcher.csproj
+++ b/Edge.Processes.DirectoryWatcher/trunk/Edge.Processes.DirectoryWatcher.csproj
@@ -31,10 +31,10 @@
     <CodeAnalysisRuleDirectories>;C:\Program Files\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-	<UseAppConfigForCompiler>false</UseAppConfigForCompiler>
-	<UseVSHostingProcess>false</UseVSHostingProcess>
-    <OutputPath>..\..\..\..\Deployment\Edge-Processes</OutputPath>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Seperia|AnyCPU'">
+    <UseAppConfigForCompiler>false</UseAppConfigForCompiler>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <OutputPath>bin\Release</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
@@ -80,12 +80,6 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Framework\Edge.Core\Edge.Core.csproj">
-      <Project>{AD4B53AD-B28A-4E90-9483-D2F7C8E6D436}</Project>
-      <Name>Edge.Core</Name>
-    </ProjectReference>
-  </ItemGroup>
   <ItemGroup Condition="'$(Configuration)' != 'Release'">
     <None Include="App.config">
       <SubType>Designer</SubType>
@@ -99,12 +93,28 @@
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\edge-framework\Edge.Core\trunk\Edge.Core.csproj">
+      <Project>{AD4B53AD-B28A-4E90-9483-D2F7C8E6D436}</Project>
+      <Name>Edge.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\AssemblyInfo.cs.template" />
+  </ItemGroup>
+	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+	<Import Project="$(MSBuildExtensionsPath)\MSBuildCommunityTasks\MSBuild.Community.Tasks.Targets" />
+	<Target Name="BeforeCompile">
+		<SvnVersion LocalPath=".">
+			<Output TaskParameter="Revision" PropertyName="SvnRevision" />
+		</SvnVersion>
+		<FormatVersion Version="2.9.1.%2a" Revision="$(SvnRevision)">
+			<Output TaskParameter="OutputVersion" PropertyName="ApplicationVersion" />
+		</FormatVersion>
+	</Target>
+	<PropertyGroup>
+		<PreBuildEvent>subwcrev.exe "$(ProjectDir)." "$(ProjectDir)Properties\AssemblyInfo.cs.template" "$(ProjectDir)Properties\AssemblyInfo.cs"</PreBuildEvent>
+		<PostBuildEvent>
+		</PostBuildEvent>
+	</PropertyGroup>
 </Project>
