--- a/Edge.Processes.SchedulingHost/trunk/App.config
+++ b/Edge.Processes.SchedulingHost/trunk/App.config
@@ -13,6 +13,7 @@
 		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeProduct" value="2.1"/>
 		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeParentService" value="20"/>
 		<add key="Edge.Core.Scheduling.Scheduler.MaxExecutionTimeChildService" value="4"/>
+		<add key="log4net.Internal.Debug" value="true"/>
 	</appSettings>
 	<connectionStrings>		
 		<add name="Edge.Core.Scheduling.Scheduler.OLTP" connectionString="Data Source=alonya-pc;Initial Catalog=testdb;Integrated Security=false;User ID=sa;PWD=Iuh2sstd"/>
@@ -27,11 +28,11 @@
 			</service>
 			<service name="Edge.Processes.SchedulingHost.SchedulingCommunication" >
 				<endpoint  name="Edge.Processes.SchedulingHost.SchedulingCommunication"  binding="netNamedPipeBinding" bindingConfiguration="SchedulerHostConfig" contract="Edge.Processes.SchedulingHost.SchedulingCommunication"  address="net.pipe://localhost/"/>
-				<host>
+				<!--<host>
 					<baseAddresses>
 						<add baseAddress="net.pipe://localhost/Scheduler"/>
 					</baseAddresses> 
-				</host>
+				</host>-->
 			</service>
 
 		</services>
